# torchtitan-fork

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  install.sh  multinode_trainer.slurm  pyproject.toml  run_llama_train.sh  setup.sh  submit.sh  train.py  train_multinode.sh
.ci/docker/: requirements.txt
.github/workflows/: ci.yaml
low_bits_training/: __init__.py  config_manager.py  low_precision_handler.py  metrics.py  optimizer.py  profiling.py  utils.py
low_bits_training/datasets/: __init__.py
low_bits_training/models/: __init__.py
low_bits_training/quantization/: __init__.py  quantization_handler.py
scripts/: download-dataset.slurm  download_dataset.py  install.sh  random_name.py  setup.sh  titan_sweep.py
tests/: test_config_manager.py  test_datasets.py  test_model_args_overrides.py  test_optimizer.py  test_profiling.py  test_titan_sweep.py  test_titan_sweep.sh  test_utils.py
tests/quantization/: test_quantization_handler.py
torchtitan/: loss.py  optimizer.py  umup_optimizer.py
torchtitan/components/: optimizer.py
torchtitan/models/llama/: __init__.py  umup_model.py
train_configs/: debug_model.toml  llama3_1b.toml  llama3_3b.toml  llama3_8b.toml  llama3_8b_fp8.toml  llama3_8b_multinode.toml  llama3_8b_profiling.toml
train_configs/sweeps/: sweep_pipeline_parallel.json  test_batch_seq.json  test_data_parallel.json  test_dp_options.json  test_tensor_parallel.json  test_tensor_parallel_const_token.json
