[project]
name = "low-bits-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.2",
    "zstandard",
    "wandb",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
]

[tool.setuptools]
packages = ["low_bits_training", "low_bits_training.datasets", "low_bits_training.models"]
