[project]
name = "low-bits-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # TorchTitan dependencies.
    "torchdata >= 0.8.0",
    "datasets >= 2.21.0",
    "tomli >= 1.1.0 ; python_version < \"3.11\"",
    "tensorboard",
    "sentencepiece",
    "tiktoken",
    "blobfile",
    "tabulate",
    # Low-bits-training dependencies.
    "numpy >= 2.1.2",
    "torch >= 2.5.1",
    "torchao",
    "zstandard",
    "wandb",
    # NCCL H100 cluster fix
    # Issue with resolving dependencies
    # "nvidia-nccl-cu12>=2.23.4",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
]

[tool.setuptools]
packages = ["low_bits_training", "low_bits_training.datasets", "low_bits_training.models"]

[tool.ruff]
# Omit running ruff formatting & check on TorchTitan sub-module.
extend-exclude = ["torchtitan"]

line-length = 90
target-version = 'py310'

[tool.ruff.lint]
# Copyright checking requires preview
preview = true
extend-select = ["CPY"]

[tool.ruff.lint.flake8-copyright]
author = "Graphcore Ltd. All rights reserved."
